fixed spacing issue in maincontent

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,21 +51,22 @@ header a {
 #maincontent h1, h2 {
 	color: #4aaaa5;
 	border-bottom-style: solid;
-	border-width: 4px;
-	border-color: #777;
+	border-width: 2px;
+	border-color: #ccc;
+	margin: 20px;
 }
 
 #maincontent p {
 	font-size: 16pt;
 	color: #777;
-	margin-right: 10px;
+	margin: 30px;
 }
 
 #maincontent img {
 	height: 200px;
 	width: 200px;
 	float: left;
-	margin-right: 30px;
+	margin: 30px;
 }
 
 #connectbox {
